--- a/users/u_lesson.html
+++ b/users/u_lesson.html
@@ -31,8 +31,7 @@
   <link href="../css/comment-block.css" rel="stylesheet">
   <link href="../css/main-nav.css" rel="stylesheet">
 
-  <link rel="stylesheet" href="../css/blocks/menu.css">
-  <link rel="stylesheet" href="../css/blocks/u_lesson.css">
+  <link rel="stylesheet" href="../css/pages/u_lesson.css">
 
 </head>
 
@@ -82,7 +81,6 @@
         </div>
       </div>
     </div>
-
     <div class="open-mobile-menu nav__wrapper nav" js-mobile-menu style="display: none">
       <div class="open-mobile-menu__container">
 
@@ -98,7 +96,7 @@
                   </div>
                 </div>
               </div>
-              <div class="main-nav__avatar-desc">
+              <div class="main-nav__avatar-desc nav__user">
                 <div class="main-nav__avatar-name nav__name">Агнаева Екатерина Викторовна</div>
               </div>
             </div>
@@ -121,7 +119,6 @@
               <div class="main-nav__item-title">Мои курсы</div>
             </a>
           </div>
-
           <div class="main-nav__items-wrapper nav__item nav__item">
             <a href="/user/courses/" class="main-nav__item-wrapper">
               <div class="main-nav__item main-nav__item_dashboard  main-nav__item_active  nav__icon">
@@ -132,7 +129,7 @@
 
           <div class=" open-mobile-menu__exit nav__item">
             <a href="/logout" class="main-nav__item-wrapper">
-              <div class="main-nav__item main-nav__item_exit nav__icon"">
+              <div class="main-nav__item main-nav__item_exit nav__icon">
                 </div>
                 <div class=" main-nav__item-title">Выйти из аккаунта</div>
             </a>
@@ -188,7 +185,6 @@
       </div>
     </div>
   </div>
-
   <!-- Container -->
 
   <div class="body__wrapper">
@@ -238,8 +234,6 @@
               <div class="title title-h2 -gap_0 lessons__title" th:utext="${lesson.title}">Заголовок</div>
               <div class="subtitle subtitle-h5" th:utext="'Урок ' + ${lesson.index}">Урок 1</div>
             </div>
-
-
             <thlock th:each="lessonBlock,stat : ${lesson.lessonBlocks}">
 
               <div class="content-element element" th:if="${lessonBlock.type == 'video'}">
@@ -260,20 +254,16 @@
                   </div>
                   <div class="content-element__main">
                     <div class="content-element__video">
+
                       <div class="content-element__video-wrapper">
                         <a data-fancybox th:href="${lessonBlock.value}" class="content-video">
-                          <!-- <img
-                            th:src="'//img.youtube.com/vi/' + ${#strings.substring(lessonBlock.value, #strings.indexOf(lessonBlock.value, '.be/') + 4, #strings.length(lessonBlock.value))} + '/mqdefault.jpg'"
-                            class="content-video__preview" alt=""> -->
-
-                            <img src="../img/lesson.png" alt="">
+                          <img src="../img/lesson.png" alt="">
                         </a>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-
               <div class="content-element" th:if="${lessonBlock.type == 'text'}">
                 <div class="content-element__wrapper">
                   <div class="content-element__side">
@@ -357,7 +347,6 @@
                   </div>
                 </div>
               </div>
-
               <div class="content-element" th:if="${lessonBlock.type == 'document'}">
                 <div class="content-element__wrapper documents">
                   <div class="content-element__side content-element__side_small">
@@ -430,7 +419,6 @@
                   </div>
                 </div>
               </div>
-
               <div class="content-element" th:if="${lessonBlock.type == 'image'}">
                 <div class="content-element__wrapper lesson-image">
                   <div class="content-element__side">
@@ -439,7 +427,8 @@
                         <div class="content-element__header-item">
                           <div class="content-element__header-main">
                             <div class="content-element__header-element">
-                              <span class="content-element__title title title-h6 lesson-image__title lesson-image__title"
+                              <span
+                                class="content-element__title title title-h6 lesson-image__title lesson-image__title"
                                 th:utext="${lessonBlock.title}">Заголовок</span>
                             </div>
                           </div>
@@ -451,7 +440,6 @@
                     <div class="content-element__image lesson-image__img">
                       <div class="content-element__image-wrapper">
                         <a data-fancybox th:href="'/' + ${lessonBlock.value}" class="content-image">
-                          <img th:src="'/' + ${lessonBlock.value}" alt="">
                           <img src="../img/lesson.png" alt="">
                         </a>
                       </div>
@@ -459,7 +447,6 @@
                   </div>
                 </div>
               </div>
-
               <div class="content-element" th:if="${lessonBlock.type == 'gallery'}">
                 <div class="content-element__wrapper works">
                   <div class="content-element__side">
@@ -500,7 +487,6 @@
                   </div>
                 </div>
               </div>
-
             </thlock>
 
             <th:block th:unless="${isVoted}">
@@ -537,7 +523,8 @@
                             <div vote data-rate="0" class="content-element__header-btn raiting-btn">
                               <div class="btn btn_outline-gray raiting-btn__inner">
                                 <div class="btn__content btn__content_xlarge raiting-btn__content raiting-btn__content">
-                                  <span class="btn__title btn__icon btn__icon_dislike btn__title_medium raiting-btn__icon">
+                                  <span
+                                    class="btn__title btn__icon btn__icon_dislike btn__title_medium raiting-btn__icon">
                                     <span class="btn_title-text btn_title-text_small raiting-btn__text">
                                     </span>
                                   </span>
@@ -551,10 +538,7 @@
                   </div>
                 </div>
               </div>
-
-
             </th:block>
-
             <th:block th:if="${lesson.type == 'homework'}">
               <th:block th:if="${!isHomeworkCompleted and allowHomeworkStart}">
                 <div class="block-delimiter -gap_7" js-hide-on-complete></div>
@@ -655,19 +639,23 @@
                                     </div>
                                   </div>
                                   <div class="comment__body">
-                                    <div class="comment__text" th:utext="${comment.text}">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque eum dolores, minus molestiae facere consectetur explicabo quidem, recusandae, dolorem iusto sequi ipsum iste. Veritatis ratione odio sequi saepe </div>
+                                    <div class="comment__text" th:utext="${comment.text}">Lorem ipsum dolor sit amet
+                                      consectetur, adipisicing elit. Itaque eum dolores, minus molestiae facere
+                                      consectetur explicabo quidem, recusandae, dolorem iusto sequi ipsum iste.
+                                      Veritatis ratione odio sequi saepe </div>
                                     <div class="gallery -gap-inner-top_5">
                                       <div class="gallery__wrapper gallery__wrapper_small custom-scroll">
                                         <div class="gallery__list">
-                                          <th:block th:each="homeworkFile : ${comment.homeworkFiles}" class="gallery__inner">
+                                          <th:block th:each="homeworkFile : ${comment.homeworkFiles}"
+                                            class="gallery__inner">
                                             <th:block
                                               th:if="${homeworkFile.type == 'jpeg' || homeworkFile.type == 'jpg' || homeworkFile.type == 'png'}">
                                               <div class="gallery__item">
                                                 <a th:href="${'/' + homeworkFile.path}"
                                                   th:attr="data-fancybox=${homeworkFile.name}"
                                                   class="gallery-item gallery-item_small">
-                                                  <img class="gallery-item__preview"
-                                                    th:src="${'/' + homeworkFile.path}">
+                                                  <!-- <img class="gallery-item__preview"
+                                                    th:src="${'/' + homeworkFile.path}"> -->
                                                 </a>
                                               </div>
                                             </th:block>
@@ -700,7 +688,8 @@
                                     <div class="comment__header-item">
                                       <div class="comment__title">
                                         <img class="comment__avatar" src="../img/image13.png" alt="">
-                                        <span class="comment__author">Автор <span class="comment__author--lightgray">Куратор</span></span>
+                                        <span class="comment__author">Автор <span
+                                            class="comment__author--lightgray">Куратор</span></span>
                                       </div>
                                     </div>
                                   </div>
@@ -709,7 +698,9 @@
                                     <div class="gallery -gap-inner-top_5">
                                       <div class="gallery__wrapper gallery__wrapper_small custom-scroll">
                                         <div class="gallery__list">
-                                          <th:block th:each="homeworkFile : ${comment.homeworkFiles}" class="gallery__inner">
+                                          <th:block th:each="homeworkFile : ${comment.homeworkFiles}"
+                                            class="gallery__inner">
+                                            
                                             <th:block
                                               th:if="${homeworkFile.type == 'jpeg' || homeworkFile.type == 'jpg' || homeworkFile.type == 'png'}">
                                               <div class="gallery__item">
@@ -721,11 +712,13 @@
                                                 </a>
                                               </div>
                                             </th:block>
+
                                             <th:block
                                               th:if="${homeworkFile.type == 'doc' || homeworkFile.type == 'pdf'}">
                                               <a th:href="${homeworkFile.id + '/' + homeworkFile.path}"
                                                 class="gallery__item">
-                                                <div class="gallery-item gallery-item_small gallery-item_pdf comment__files">
+                                                <div
+                                                  class="gallery-item gallery-item_small gallery-item_pdf comment__files">
                                                   <div class="gallery-item__title" th:utext="${homeworkFile.type}">
                                                   </div>
                                                   <div class="gallery-item__subtitle" th:utext="${homeworkFile.name}">
@@ -749,7 +742,6 @@
                 </div>
               </th:block>
             </th:block>
-
             <div class="block-delimiter"></div>
 
             <div class="content-nav">
@@ -771,9 +763,8 @@
       </div>
     </div>
   </div>
-</body>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 <script src="../js/main.js"></script>
 <script src="../js/jquery.fancybox.min.js"></script>
@@ -781,6 +772,10 @@
 <script src="../js/lesson-vote.js"></script>
 <script src="../js/upload-item-files.js"></script>
 <script src="../js/homework.js"></script>
+
+</body>
+
+
 
 
 <!-- <th:block th:insert="base :: jquery" />
