--- a/users/u_lesson.html
+++ b/users/u_lesson.html
@@ -708,7 +708,7 @@
                                                   th:attr="data-fancybox=${homeworkFile.name}"
                                                   class="gallery-item gallery-item_small ">
                                                   <img class="gallery-item__preview comment__files"
-                                                    th:src="${'/' + homeworkFile.path}">
+                                                    th:src="${'/' + homeworkFile.path}" alt="files">
                                                 </a>
                                               </div>
                                             </th:block>
