--- a/users/u_lesson.html
+++ b/users/u_lesson.html
@@ -178,14 +178,16 @@
       </div>
 
       <div class="main-nav__list-items">
-        <div class="main-nav__items-wrapper">
-          <div class="main-nav__items-wrapper">
-            <a href="/user/courses/" class="main-nav__item-wrapper">
-              <div class="main-nav__item main-nav__item_dashboard  main-nav__item_active"></div>
-              <div class="main-nav__item-title">Мои курсы</div>
-            </a>
-          </div>
+
+        <div class="main-nav__items-wrapper nav__item">
+          <a data-type="settings" href="/user/courses/" class="main-nav__item-wrapper">
+            <div class="main-nav__item main-nav__item_dashboard nav__settings main-nav__item_active">
+            </div>
+            <div class="main-nav__item-title">Мои Курсы</div>
+          </a>
         </div>
+
+
 
         <div class="main-nav__items-wrapper nav__item">
           <a data-type="settings" href="/user/courses/" class="main-nav__item-wrapper">
@@ -204,8 +206,6 @@
       </div>
     </div>
   </div>
-
-
 
   <!-- Container -->
 
