--- a/users/u_modules.html
+++ b/users/u_modules.html
@@ -32,172 +32,176 @@
 <body class="body"  onload="getCountdownOnUserModulesPage()">
 	<div th:replace="base :: user-nav"></div>
 
-  <!-- Мобильное меню -->
 
-  <div class="mobile-nav">
-    <div class="mobile-nav__box block menu__inner mobile-menu">
+	  <!-- Мобильное меню -->
 
-      <div class="mobile-nav__wrapper block-wrapper mobile-menu__inner">
+		<div class="mobile-nav">
+			<div class="mobile-nav__box block menu__inner mobile-menu">
+	
+				<div class="mobile-nav__wrapper block-wrapper mobile-menu__inner">
+	
+					<div class="mobile-nav__main">
+	
+						<div class="mobile-nav__items">
+	
+							<div class="mobile-nav__items-wrapper mobile-menu__wrapper">
+	
+								<div class="mobile-nav__item mobile-nav__item_menu mobile-menu__left">
+	
+									<div js-open-mobile-menu class="mobile-menu mobile-menu__control">
+										<div class="mobile-menu__item mobile-menu__item_close">
+											<div class="mobile-menu__icon mobile-menu__icon_close"></div>
+										</div>
+										<div class="mobile-menu__item mobile-menu__item_open">
+											<div class="mobile-menu__icon mobile-menu__icon_open"></div>
+										</div>
+	
+										<div class="mobile-menu__item mobile-menu__item">
+											Меню
+										</div>
+									</div>
+								</div>
+	
+								<div class="mobile-nav__item mobile-nav__item_avatar mobile-menu__right">
+									<div class="avatar">
+										<div class="avatar__wrapper avatar__wrapper_xsmall">
+											<span class="avatar-image avatar-image_default mobile-menu__avatar">
+												<img src="../img/menu/image13.png" alt="avatar">
+											</span>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+	
+			<div class="open-mobile-menu nav__wrapper nav" js-mobile-menu style="display: none">
+				<div class="open-mobile-menu__container">
+	
+					<div class="main-nav__logo open-mobile-menu__logo menu__avatar nav__info">
+						<div class="main-nav__item-wrapper open-mobile-menu__item-wrapper">
+							<div class="main-nav__item-wrapper nav__item  nav__item-name">
+								<div class="main-nav__avatar menu__avatar">
+									<div class="avatar">
+										<div class="avatar__wrapper avatar__wrapper_large">
+											<span class="avatar-image avatar-image_large avatar-image_default">
+												<img src="../img/menu/image13.png" alt="avatar">
+											</span>
+										</div>
+									</div>
+								</div>
+								<div class="main-nav__avatar-desc">
+									<div class="main-nav__avatar-name nav__name">Агнаева Екатерина Викторовна</div>
+								</div>
+							</div>
+							<div class="open-mobile-menu__close menu__close" js-close-mobile-menu>
+								<svg width="20" height="20" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path
+										d="M8.25352 6.50015L12.6369 10.8835C13.1211 11.3677 13.1211 12.1527 12.6369 12.6369C12.1527 13.121 11.3677 13.121 10.8835 12.6369L6.50017 8.25352L2.11681 12.6369C1.63262 13.121 0.847605 13.121 0.363427 12.6369C-0.120745 12.1527 -0.120739 11.3677 0.36344 10.8835L4.74682 6.50015L0.363138 2.11651C-0.121041 1.63233 -0.121047 0.847327 0.363125 0.363144C0.847302 -0.121044 1.63232 -0.121049 2.1165 0.363133L6.50017 4.74678L10.8838 0.363133C11.368 -0.121049 12.153 -0.121044 12.6372 0.363144C13.1214 0.847327 13.1214 1.63233 12.6372 2.11651L8.25352 6.50015Z"
+										fill="black" />
+								</svg>
+							</div>
+						</div>
+					</div>
+	
+					<div class="main-nav__list-items open-mobile-menu__list-items nav__list">
+	
+						<div class="main-nav__items-wrapper nav__item">
+							<a href="/user/courses/" class="main-nav__item-wrapper">
+								<div class="main-nav__item main-nav__item_dashboard  main-nav__item_active">
+								</div>
+								<div class="main-nav__item-title">Мои курсы</div>
+							</a>
+						</div>
+	
+						<div class="main-nav__items-wrapper nav__item nav__item">
+							<a href="/user/courses/" class="main-nav__item-wrapper">
+								<div class="main-nav__item main-nav__item_dashboard  main-nav__item_active  nav__icon">
+								</div>
+								<div class="main-nav__item-title">Мои курсы</div>
+							</a>
+						</div>
+	
+						<div class="main-nav__items-wrapper nav__item nav__item">
+							<a data-type="settings" href="/user/courses/" class="main-nav__item-wrapper active ">
+								<div class="main-nav__item main-nav__item_dashboard  main-nav__item_active user-settings nav__icon">
+								</div>
+								<div class="main-nav__item-title">Мои настройки</div>
+							</a>
+						</div>
+	
+						<div class=" open-mobile-menu__exit nav__item">
+							<a href="/logout" class="main-nav__item-wrapper">
+								<div class="main-nav__item main-nav__item_exit nav__icon">
+								</div>
+								<div class=" main-nav__item-title">Выйти из аккаунта</div>
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+	
+	
+			<script src="../js/jquery-3.4.1.min.js"></script>
+			<script src="../js/main.js"></script>
+		</div>
+	
+		<!-- Меню -->
+	
+		<div class="main-nav main-nav_none menu">
+			<div class="main-nav__wrapper menu">
+	
+				<div class="main-nav__logo">
+					<div class="main-nav__item-wrapper">
+						<div class="main-nav__item-wrapper menu__nav-item">
+							<div class="main-nav__avatar">
+								<div class="avatar">
+									<div class="avatar__wrapper avatar__wrapper_large">
+										<span class="avatar-image avatar-image_large avatar-image_default menu__avatar">
+											<img src="../img/menu/image13.png" alt="avatar">
+										</span>
+									</div>
+								</div>
+							</div>
+							<div class="main-nav__avatar-desc nav__user">
+								<div class="main-nav__avatar-name nav__name">Агнаева Екатерина Викторовна</div>
+							</div>
+						</div>
+					</div>
+				</div>
+	
+				<div class="main-nav__list-items">
+	
+					<div class="main-nav__items-wrapper nav__item">
+						<a data-type="settings" href="/user/courses/" class="main-nav__item-wrapper">
+							<div class="main-nav__item main-nav__item_dashboard nav__settings main-nav__item_active">
+							</div>
+							<div class="main-nav__item-title">Мои Курсы</div>
+						</a>
+					</div>
+	
+	
+	
+					<div class="main-nav__items-wrapper nav__item">
+						<a data-type="settings" href="/user/courses/" class="main-nav__item-wrapper">
+							<div class="main-nav__item main-nav__item_dashboard nav__settings user-settings main-nav__item_active">
+							</div>
+							<div class="main-nav__item-title">Мои настройки</div>
+						</a>
+					</div>
+	
+					<div class="main-nav__items-wrapper nav__item">
+						<a href="/logout" class="main-nav__item-wrapper">
+							<div class="main-nav__item main-nav__item_exit"></div>
+							<div class="main-nav__item-title">Выход</div>
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
 
-        <div class="mobile-nav__main">
-
-          <div class="mobile-nav__items">
-
-            <div class="mobile-nav__items-wrapper mobile-menu__wrapper">
-
-              <div class="mobile-nav__item mobile-nav__item_menu mobile-menu__left">
-
-                <div js-open-mobile-menu class="mobile-menu mobile-menu__control">
-                  <div class="mobile-menu__item mobile-menu__item_close">
-                    <div class="mobile-menu__icon mobile-menu__icon_close"></div>
-                  </div>
-                  <div class="mobile-menu__item mobile-menu__item_open">
-                    <div class="mobile-menu__icon mobile-menu__icon_open"></div>
-                  </div>
-
-                  <div class="mobile-menu__item mobile-menu__item">
-                    Меню
-                  </div>
-                </div>
-              </div>
-
-              <div class="mobile-nav__item mobile-nav__item_avatar mobile-menu__right">
-                <div class="avatar">
-                  <div class="avatar__wrapper avatar__wrapper_xsmall">
-                    <span class="avatar-image avatar-image_default mobile-menu__avatar">
-                      <img src="../img/menu/image13.png" alt="avatar">
-                    </span>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="open-mobile-menu nav__wrapper nav" js-mobile-menu style="display: none">
-      <div class="open-mobile-menu__container">
-
-        <div class="main-nav__logo open-mobile-menu__logo menu__avatar nav__info">
-          <div class="main-nav__item-wrapper open-mobile-menu__item-wrapper">
-            <div class="main-nav__item-wrapper nav__item  nav__item-name">
-              <div class="main-nav__avatar menu__avatar">
-                <div class="avatar">
-                  <div class="avatar__wrapper avatar__wrapper_large">
-                    <span class="avatar-image avatar-image_large avatar-image_default">
-                      <img src="../img/menu/image13.png" alt="avatar">
-                    </span>
-                  </div>
-                </div>
-              </div>
-              <div class="main-nav__avatar-desc">
-                <div class="main-nav__avatar-name nav__name">Агнаева Екатерина Викторовна</div>
-              </div>
-            </div>
-            <div class="open-mobile-menu__close menu__close" js-close-mobile-menu>
-              <svg width="20" height="20" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M8.25352 6.50015L12.6369 10.8835C13.1211 11.3677 13.1211 12.1527 12.6369 12.6369C12.1527 13.121 11.3677 13.121 10.8835 12.6369L6.50017 8.25352L2.11681 12.6369C1.63262 13.121 0.847605 13.121 0.363427 12.6369C-0.120745 12.1527 -0.120739 11.3677 0.36344 10.8835L4.74682 6.50015L0.363138 2.11651C-0.121041 1.63233 -0.121047 0.847327 0.363125 0.363144C0.847302 -0.121044 1.63232 -0.121049 2.1165 0.363133L6.50017 4.74678L10.8838 0.363133C11.368 -0.121049 12.153 -0.121044 12.6372 0.363144C13.1214 0.847327 13.1214 1.63233 12.6372 2.11651L8.25352 6.50015Z"
-                  fill="black" />
-              </svg>
-            </div>
-          </div>
-        </div>
-
-        <div class="main-nav__list-items open-mobile-menu__list-items nav__list">
-
-          <div class="main-nav__items-wrapper nav__item">
-            <a href="/user/courses/" class="main-nav__item-wrapper">
-              <div class="main-nav__item main-nav__item_dashboard  main-nav__item_active">
-              </div>
-              <div class="main-nav__item-title">Мои курсы</div>
-            </a>
-          </div>
-
-          <div class="main-nav__items-wrapper nav__item nav__item">
-            <a href="/user/courses/" class="main-nav__item-wrapper">
-              <div class="main-nav__item main-nav__item_dashboard  main-nav__item_active  nav__icon">
-              </div>
-              <div class="main-nav__item-title">Мои курсы</div>
-            </a>
-          </div>
-
-          <div class="main-nav__items-wrapper nav__item nav__item">
-            <a data-type="settings" href="/user/courses/" class="main-nav__item-wrapper active ">
-              <div class="main-nav__item main-nav__item_dashboard  main-nav__item_active user-settings nav__icon">
-              </div>
-              <div class="main-nav__item-title">Мои настройки</div>
-            </a>
-          </div>
-
-          <div class=" open-mobile-menu__exit nav__item">
-            <a href="/logout" class="main-nav__item-wrapper">
-              <div class="main-nav__item main-nav__item_exit nav__icon">
-              </div>
-              <div class=" main-nav__item-title">Выйти из аккаунта</div>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-
-
-    <script src="../js/jquery-3.4.1.min.js"></script>
-    <script src="../js/main.js"></script>
-  </div>
-
-  <!-- Меню -->
-
-  <div class="main-nav main-nav_none menu">
-    <div class="main-nav__wrapper menu">
-
-      <div class="main-nav__logo">
-        <div class="main-nav__item-wrapper">
-          <div class="main-nav__item-wrapper menu__nav-item">
-            <div class="main-nav__avatar">
-              <div class="avatar">
-                <div class="avatar__wrapper avatar__wrapper_large">
-                  <span class="avatar-image avatar-image_large avatar-image_default menu__avatar">
-                    <img src="../img/menu/image13.png" alt="avatar">
-                  </span>
-                </div>
-              </div>
-            </div>
-            <div class="main-nav__avatar-desc nav__user">
-              <div class="main-nav__avatar-name nav__name">Агнаева Екатерина Викторовна</div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="main-nav__list-items">
-        <div class="main-nav__items-wrapper">
-          <div class="main-nav__items-wrapper">
-            <a href="/user/courses/" class="main-nav__item-wrapper">
-              <div class="main-nav__item main-nav__item_dashboard  main-nav__item_active"></div>
-              <div class="main-nav__item-title">Мои курсы</div>
-            </a>
-          </div>
-        </div>
-
-        <div class="main-nav__items-wrapper nav__item">
-          <a data-type="settings" href="/user/courses/" class="main-nav__item-wrapper">
-            <div class="main-nav__item main-nav__item_dashboard nav__settings user-settings main-nav__item_active">
-            </div>
-            <div class="main-nav__item-title">Мои настройки</div>
-          </a>
-        </div>
-
-        <div class="main-nav__items-wrapper nav__item">
-          <a href="/logout" class="main-nav__item-wrapper">
-            <div class="main-nav__item main-nav__item_exit"></div>
-            <div class="main-nav__item-title">Выход</div>
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
 
 	<div class="body__wrapper">
 		<div class="body__header">
