--- a/users/u_lesson.html
+++ b/users/u_lesson.html
@@ -673,22 +673,24 @@
                                             <th:block
                                               th:if="${homeworkFile.type == 'jpeg' || homeworkFile.type == 'jpg' || homeworkFile.type == 'png'}">
                                               <div class="gallery__item">
-                                                <a th:href="${'/' + homeworkFile.path}"
+                                                <a data-fancybox th:href="${'/' + homeworkFile.path}"
                                                   th:attr="data-fancybox=${homeworkFile.name}"
                                                   class="gallery-item gallery-item_small">
                                                   <!-- <img class="gallery-item__preview"
                                                     th:src="${'/' + homeworkFile.path}"> -->
+
+                                                    <img src="../img/bg.png" alt="">
                                                 </a>
                                               </div>
                                             </th:block>
                                             <th:block
                                               th:if="${homeworkFile.type == 'doc' || homeworkFile.type == 'pdf'}">
-                                              <a th:href="${homeworkFile.id + '/' + homeworkFile.path}"
+                                              <a data-fancybox th:href="${homeworkFile.id + '/' + homeworkFile.path}"
                                                 class="gallery__item">
                                                 <div class="gallery-item gallery-item_small gallery-item_pdf">
-                                                  <div class="gallery-item__title" th:utext="${homeworkFile.type}">
+                                                  <div class="gallery-item__title" th:utext="${homeworkFile.type}">pdf
                                                   </div>
-                                                  <div class="gallery-item__subtitle" th:utext="${homeworkFile.name}">
+                                                  <div class="gallery-item__subtitle" th:utext="${homeworkFile.name}">Title
                                                   </div>
                                                 </div>
                                               </a>
@@ -725,25 +727,27 @@
                                             
                                             <th:block
                                               th:if="${homeworkFile.type == 'jpeg' || homeworkFile.type == 'jpg' || homeworkFile.type == 'png'}">
-                                              <div class="gallery__item">
-                                                <a th:href="${'/' + homeworkFile.path}"
+                                              <div  class="gallery__item">
+                                                <a data-fancybox th:href="${'/' + homeworkFile.path}"
                                                   th:attr="data-fancybox=${homeworkFile.name}"
                                                   class="gallery-item gallery-item_small ">
-                                                  <img class="gallery-item__preview comment__files"
-                                                    th:src="${'/' + homeworkFile.path}" alt="files">
+                                                  <!-- <img class="gallery-item__preview comment__files"
+                                                    th:src="${'/' + homeworkFile.path}" alt="files"> -->
+
+                                                    <img src="../img/bg.png" alt="">
                                                 </a>
                                               </div>
                                             </th:block>
 
                                             <th:block
                                               th:if="${homeworkFile.type == 'doc' || homeworkFile.type == 'pdf'}">
-                                              <a th:href="${homeworkFile.id + '/' + homeworkFile.path}"
+                                              <a data-fancybox th:href="${homeworkFile.id + '/' + homeworkFile.path}"
                                                 class="gallery__item">
                                                 <div
                                                   class="gallery-item gallery-item_small gallery-item_pdf comment__files">
-                                                  <div class="gallery-item__title" th:utext="${homeworkFile.type}">
+                                                  <div class="gallery-item__title" th:utext="${homeworkFile.type}">pdf
                                                   </div>
-                                                  <div class="gallery-item__subtitle" th:utext="${homeworkFile.name}">
+                                                  <div class="gallery-item__subtitle" th:utext="${homeworkFile.name}">Title
                                                   </div>
                                                 </div>
                                               </a>
