--- a/users/u_lesson.html
+++ b/users/u_lesson.html
@@ -685,7 +685,7 @@
                                             </th:block>
                                             <th:block
                                               th:if="${homeworkFile.type == 'doc' || homeworkFile.type == 'pdf'}">
-                                              <a data-fancybox th:href="${homeworkFile.id + '/' + homeworkFile.path}"
+                                              <a th:href="${homeworkFile.id + '/' + homeworkFile.path}"
                                                 class="gallery__item">
                                                 <div class="gallery-item gallery-item_small gallery-item_pdf">
                                                   <div class="gallery-item__title" th:utext="${homeworkFile.type}">pdf
@@ -741,7 +741,7 @@
 
                                             <th:block
                                               th:if="${homeworkFile.type == 'doc' || homeworkFile.type == 'pdf'}">
-                                              <a data-fancybox th:href="${homeworkFile.id + '/' + homeworkFile.path}"
+                                              <a th:href="${homeworkFile.id + '/' + homeworkFile.path}"
                                                 class="gallery__item">
                                                 <div
                                                   class="gallery-item gallery-item_small gallery-item_pdf comment__files">
