--- a/users/u_lesson.html
+++ b/users/u_lesson.html
@@ -687,7 +687,7 @@
                                               th:if="${homeworkFile.type == 'doc' || homeworkFile.type == 'pdf'}">
                                               <a th:href="${homeworkFile.id + '/' + homeworkFile.path}"
                                                 class="gallery__item">
-                                                <div class="gallery-item gallery-item_small gallery-item_pdf">
+                                                <div class="gallery-item gallery-item_small gallery-item_pdf comment__files">
                                                   <div class="gallery-item__title" th:utext="${homeworkFile.type}">pdf
                                                   </div>
                                                   <div class="gallery-item__subtitle" th:utext="${homeworkFile.name}">Title
